--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: Hello, world! I'm Royal Bhati
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is my blog where I try to explain Machine Learning topics in a simple way.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -15,7 +13,7 @@ about-author: I am a python developer focusing on Machine Learning and Deep lear
 social-twitter: royal_bhati
 social-facebook: # add your Facebook handle
 social-github: royalbhati # add your Github handle
-social-linkedin: # add your Linkedin handle
+social-linkedin:royal-bhati-bb1052170 # add your Linkedin handle
 social-email: royal240596@gmail.com
 
 # Disqus
